# Bobby-AI-Chat

./: .env.example  .gitattributes  .gitignore  AI_ROLE_SYSTEM_IMPLEMENTATION.md  COMPLETE_DARK_MODE_OPTIMIZATION.md  COMPLETE_OPTIMIZATION_TEST.md  CONVERSATION_LOADING_FIX.md  COPYRIGHT  DARK_MODE_IMPROVEMENTS.md  DEMO.md  DEPLOYMENT.md  FINAL_DARK_MODE_FIXES.md  GROK_COMPLETE_IMPLEMENTATION_TEST.md  GROK_ROLE_PLAYING_UPDATE.md  GROK_STYLE_UPDATE.md  GROK_STYLE_UPDATE_TEST.md  INPUT_ALIGNMENT_AND_CONVERSATION_FIXES.md  LAYOUT_REDESIGN_TEST.md  LICENSE  MESSAGE_RETRY_IMPLEMENTATION.md  MODERN_BOBBY_THEME.md  MODERN_ROLE_FILTER_UI.md  NOTICE  README.md  REASONING_DISPLAY_IMPLEMENTATION.md  REASONING_MODEL_TROUBLESHOOTING.md  ROLE_DYNAMIC_UPDATE_TEST.md  SIDEBAR_REDESIGN_FINAL.md  STREAMING_OUTPUT_IMPLEMENTATION.md  TEST_BOBBY_THEME.md  THEME_FIX_TEST.md  THEME_SYSTEM_IMPLEMENTATION.md  THEME_TEST_CHECKLIST.md  UI_CODE_HIGHLIGHTING_IMPROVEMENTS.md  UI_FIXES_UPDATE.md  UI_POLISH_FIXES.md  browser-diagnose.js  build_qdrant.bat  build_qdrant.sh  check-database.js  (+73 more)
.claude/: settings.local.json
public/: index.html  manifest.json  service-worker.js
src/: App.css  App.js  (+2 more)
src-tauri/: Cargo.toml  database_schema.sql  knowledge_schema.sql  main_schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: bobby_chat.db-shm  bobby_chat.db-wal  knowledge_base.db-shm
src-tauri/qdrant_data/: raft_state.json
src-tauri/qdrant_data/collections/knowledge_base/0/: newest_clocks.json  replica_state.json
src-tauri/qdrant_data/collections/knowledge_base/0/segments/3b1fc1b7-10bb-4441-96f3-269dc6e7256b/: mutable_id_tracker.mappings  mutable_id_tracker.versions
src-tauri/qdrant_data/collections/knowledge_base/0/segments/3b1fc1b7-10bb-4441-96f3-269dc6e7256b/payload_index/: IDENTITY  LOG  MANIFEST-000021
src-tauri/qdrant_data/collections/knowledge_base/0/segments/3caed421-e7d7-4f7b-ad94-3660ed8bc7f9/payload_index/: IDENTITY  LOG  MANIFEST-000021
src-tauri/qdrant_data/collections/knowledge_base/0/segments/58aa2c85-b7d5-46bc-b6a0-00a147a3ed58/payload_index/: IDENTITY  LOG  MANIFEST-000021
src-tauri/qdrant_data/collections/knowledge_base/0/segments/60fda92c-1530-4af1-83d4-96b399e8eb9a/payload_index/: IDENTITY  LOG  MANIFEST-000021
src-tauri/src/: database.rs  database_migration.rs  document_processor.rs  embedding_gemma.rs  embedding_service.rs  knowledge_service.rs  lib.rs  qdrant_manager.rs  qdrant_service.rs  siliconflow_embedding.rs  types.rs  vector_service.rs
(+140 files in other folders)
