[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.4"
tauri-plugin-shell = "2.3"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
rusqlite = { version = "0.32", features = ["bundled"] }
bincode = "1.3"
sqlite-vec = "0.1.6"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
dirs = "5.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
once_cell = "1.19"
lru = "0.12"
rayon = "1.8"
ndarray = "0.15"
serde_qs = "0.13"
unicode-segmentation = "1.11"
rand = "0.8"
zerocopy = "0.7"
